# vga-renderer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.mk  README.md  build.ps1  mode13h.mk  run.ps1  vga-renderer.code-workspace
src/: Actor.cpp  Actor.h  Bitmap.cpp  Bitmap.h  BitmapInfoPrinter.cpp  BitmapInfoPrinter.h  BitmapLoader.cpp  BitmapLoader.h  BmpBitmap.cpp  BmpBitmap.h  BmpBitmapInfoPrinter.cpp  BmpBitmapInfoPrinter.h  Engine.cpp  Engine.h  FullscreenSprite.cpp  FullscreenSprite.h  Mode13h.cpp  Mode13h.h  MovableSprite.cpp  MovableSprite.h  PlanarSprite.cpp  PlanarSprite.h  ScreenDimensions.h  Sprite.cpp  Sprite.h  VgaRenderer.cpp  VgaRenderer.h  World.cpp  World.h  main.cpp
tests/: main.cpp
